# orb

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  Justfile  README.md  main.c
assets/shaders/: orb.builtin.object.vert
cmake/: add_shaders.cmake
engine/: CMakeLists.txt
engine/src/orb/: entry.h  game_types.h
engine/src/orb/allocators/: linear_allocator.c  linear_allocator.h
engine/src/orb/containers/: dynamic_array.c  dynamic_array.h
engine/src/orb/core/: application.c  application.h  asserts.h  clock.c  clock.h  event.c  event.h  expect.h  input.c  input.h  logger.c  logger.h  orb_memory.c  orb_memory.h  orb_string.c  orb_string.h  types.h
engine/src/orb/math/: math_types.h  orb_math.c  orb_math.h  random.c  random.h
engine/src/orb/platform/: filesystem.h  filesystem_posix.c  platform.c  platform.h  platform_linux.c  platform_mac.c  platform_mac.m  platform_windows.c
engine/src/orb/renderer/: renderer_backend.c  renderer_backend.h  renderer_frontend.c  renderer_frontend.h  renderer_types.h
engine/src/orb/renderer/vulkan/: vulkan_backend.c  vulkan_backend.h  vulkan_buffer.c  vulkan_buffer.h  vulkan_command_buffer.c  vulkan_command_buffer.h  vulkan_device.c  vulkan_device.h  vulkan_fence.c  vulkan_fence.h  vulkan_framebuffer.c  vulkan_framebuffer.h  vulkan_image.c  vulkan_image.h  vulkan_pipeline.c  vulkan_pipeline.h  vulkan_renderpass.c  vulkan_renderpass.h  vulkan_shader_utils.c  vulkan_shader_utils.h  vulkan_swapchain.c  vulkan_swapchain.h  vulkan_types.h
engine/src/orb/renderer/vulkan/platform/: vulkan_platform.h  vulkan_platform_linux.c  vulkan_platform_mac.c  vulkan_platform_windows.c
engine/src/orb/renderer/vulkan/shaders/: orb.builtin.object.frag  orb.builtin.object.vert  vulkan_object_shader.c  vulkan_object_shader.h
example/: CMakeLists.txt
example/src/: entry.c  game.c  game.h  main.c
game/: CMakeLists.txt
game/src/: entry.c  game.c  game.h
orb_platform/: CMakeLists.txt  platform.c
src/: CMakeLists.txt  main.c
src/core/: types.h
tests/: CMakeLists.txt
tests/src/: expect.h  main.c  test_runner.c  test_runner.h
tests/src/allocators/: linear_allocator_tests.c
tests/src/math/: orb_math_tests.c  orb_math_tests.h
